✨ | Added a command registrar to register commands